--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -82,7 +82,11 @@
             app:title="@string/title_version" />
         <Preference
             app:iconSpaceReserved="false"
-            app:title="@string/title_privacy_policy" />
+            app:title="@string/title_privacy_policy">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="https://www.google.com"/>
+        </Preference>
 
     </PreferenceCategory>
 
